# diploma

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: custom_typing.py  data_aggregator.py  data_utils.py  docx_utils.py  pandas_utils.py  runtime.py
backend/classes/: common_config.py  discipline_config.py  student_config.py
data/: dannie1.xlsx  dannie2.xlsx  diploma_themes.xlsx  Базутенко .doc  Базутенко_new.docx  Шаблон_выписки.docx  сведения_о_результатах_летней_сессии_2023_24 (2).xls
frontend/: main.py
tests/: test_data_utils.py  test_pandas_utils.py
