[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py312']
include = '\.py?$'
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
# Assume Python 3.12
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "pypackages",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # use of assert
    "S311",  # use of random
    "S608",  # use of SQL formatting (possible injection)
    "S301",  # use of pickle
    'N812',  #  Lowercase ... imported as non-lowercase ...
    'N817',  #  imported as acronym
    'N806',  #  Variable in function should be lowercase
    'N802',  #  Function name should be lowercase
    'N803',  #  Argument name should be lowercase
    'N815',  #  in class scope should not be mixedCase
    'N814',  #  Camelcase imported as constant BL
    "PT011", # pytest.raises is too broad
    # The following rules are recommended to be disabled for Ruff Formatter:
    # See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "I",   # isort
    "RUF", # Ruff-specific rules
    "FA", # flake8-future-annotations
    "ISC", # https://beta.ruff.rs/docs/rules/#flake8-implicit-str-concat-isc
    "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PT", # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
    "RSE", # https://beta.ruff.rs/docs/rules/#flake8-raise-rse
    "RET", # https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "SIM", # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "N",  # pep8-naming
    "BLE",  # flake8-blind-except
    "FURB"
]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["pipelines", "common_utils", "expectations"]